Use the right properties when checking the frame's margins

Changed it to check the Frame*Margin property instead of the
Block*Margin property as this was incorrect for a QTextFrameFormat.

Task-number: QTBUG-22173
Change-Id: I2c3066165fb592ed034874b1180593822859f933
Reviewed-by: Simon Hausmann <simon.hausmann@digia.com>

cregit: d060620e6cd3c94e7e0ff809b21593b9c0da0be2 https://github.com/qt/qtbase/commit/d060620e6cd3c94e7e0ff809b21593b9c0da0be2